# youtube-deep-search

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
src/tubelens/: __init__.py  cache.py  cli.py  config.py  llm.py  models.py  ranking.py  report.py  synthesis.py  transcripts.py  youtube.py
src/tubelens/templates/: report.html.j2
tests/: conftest.py  test_pipeline.py  test_ranking.py  test_report.py  test_transcripts.py  test_youtube.py
tests/fixtures/: .gitkeep  __init__.py
