[project]
name = "tubelens"
version = "0.1.0"
description = "Content-aware YouTube search — ranks videos by what's actually said in them, not their titles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anirudh Chatterjee" }]
keywords = ["youtube", "search", "transcripts", "llm", "semantic-search", "cli"]

# Exactly these + stdlib, per SPEC §10. Keep the dependency list minimal.
dependencies = [
    "httpx>=0.27",              # YouTube Data API is plain REST; no heavy google client
    "youtube-transcript-api>=1.0",  # code uses the v1.x instance API (.fetch/.list)
    "litellm>=1.40",           # provider-agnostic LLM calls (Anthropic/OpenAI/Ollama/...)
    "jinja2>=3.1",             # HTML report template
    "rich>=13.0",              # terminal progress display
    "pydantic>=2.0",           # config + LLM output validation
]

[project.urls]
Repository = "https://github.com/MESSIDABOSS96/youtube-deep-search"
Issues = "https://github.com/MESSIDABOSS96/youtube-deep-search/issues"

[project.scripts]
tubelens = "tubelens.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tubelens"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
